# biochem-graph

./: .gitignore  README.md  makefile  pyproject.toml
bcgraph/: __init__.py
bcgraph/data/: 10000.sdf  10001.sdf  10003.sdf  10005.sdf  10006.sdf  10008.sdf  10009.sdf  1001.sdf  10016.sdf  10018.sdf  1002.sdf  10021.sdf  10023.sdf  10024.sdf  10026.sdf  10027.sdf  10028.sdf  10029.sdf  1003.sdf  10036.sdf  10039.sdf  1004.sdf  10044.sdf  10045.sdf  1005.sdf  10051.sdf  10054.sdf  10056.sdf  10057.sdf  10058.sdf  1006.sdf  10060.sdf  10063.sdf  10064.sdf  10065.sdf  10068.sdf  1007.sdf  10071.sdf  10072.sdf  10074.sdf  (+21297 more)
bcgraph/dgl/: __init__.py  convert_mol_to_graph.py
bcgraph/faker/: __init__.py  faker.py  get_random_mol.py  molecule.py
bcgraph/faker/data/: 1.sdf  1000.sdf  10002.sdf  10004.sdf  10007.sdf  10010.sdf  10011.sdf  10015.sdf  10017.sdf  10019.sdf  10020.sdf  10022.sdf  10025.sdf  10030.sdf  10031.sdf  10032.sdf  10033.sdf  10035.sdf  10037.sdf  10038.sdf  10040.sdf  10041.sdf  10043.sdf  10046.sdf  10047.sdf  10048.sdf  10050.sdf  10053.sdf  10059.sdf  10061.sdf  10062.sdf  10070.sdf  10073.sdf  10087.sdf  10091.sdf  10093.sdf  10098.sdf  101.sdf  10103.sdf  10104.sdf  (+12933 more)
bcgraph/pyg/: __init__.py  convert_mol_to_graph.py
bcgraph/utils/: __init__.py  encoding.py  mol.py  molecule.py
biochem-graph/: __init__.py
biochem-graph/dgl/: __init__.py  convert_mol_to_graph.py
biochem-graph/faker/: molecule.py
data/: readme.txt
notebooks/: process_sdf.ipynb  split_sdf.ipynb  test_pyg.ipynb
