[tool.poetry]
name = "biochem-graph"
version = "0.1.0"
description = "Preparing molecules and protein complexes for graph neural networks in PyTorch"
authors = ["Xiaotian Duan <xduan7 at uchicago.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
