[tool.poetry]
name = "biochem-graph"
version = "0.1.0"
description = "Preparing molecules and protein complexes for graph neural networks in PyTorch"
authors = ["Xiaotian Duan <xduan7 at uchicago.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
conda = "^4.3.16"
torch = "^1.4.0"
torchvision = "^0.5.0"
# dgl = "^0.4.2"
# torch-geometric = "^1.4.3"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
flake8 = "^3.7.9"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
